--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.profiles.active=test
+
+spring.jpa.open-in-view=true
+
 spring.datasource.url = jdbc:mysql://localhost:3306/novo_banco?useTimezone=true&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = Joe#88236643
