--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.profiles.active=test
 spring.jpa.open-in-view=true
 
 spring.datasource.url = jdbc:mysql://localhost:3306/novo_banco?useTimezone=true&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = Joe#88236643
+spring.datasource.username = 
+spring.datasource.password = 
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
